syntax = "proto3";

option go_package = "github.com/openware/state-channels/app/internal/proto";

service InitProposalService {
  // Public
  rpc CreateProposal(CreateProposalRequest) returns (CreateProposalResponse);
  // Public
  rpc AddParticipant(AddParticipantRequest) returns (EmptyInitProposalResponse);
}

message Participant {
  string address = 1;
  string destination = 2;
  int64 locked_amount = 3;
  uint64 index = 4;
}

message CreateProposalRequest {
  Participant participant = 1;
  string rpc_url = 2;
  string contract_address = 3;
  string asset_address = 4;
}

message CreateProposalResponse {
  bytes initial_proposal = 1;
}

message EmptyInitProposalResponse {
}

message AddParticipantRequest {
  Participant participant = 1;
  bytes initial_proposal = 2;
}
